--- a/menu-du-roi.css
+++ b/menu-du-roi.css
@@ -269,6 +269,12 @@ li a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+  }
+  header h1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
   .food-card img {
     width: 100%;
