--- a/menu-du-roi.scss
+++ b/menu-du-roi.scss
@@ -279,7 +279,16 @@ li a{
  header{
   display: flex;
   align-items: center;
-  justify-content: space-between;}
+  justify-content: space-between;
+  width: 100%;
+}
+ 
+header h1{
+    display: flex;
+    justify-content: center;
+
+    width: 100%;
+}
   
   .food-card img{
     width: 100%;
