--- a/roi/_variables.scss
+++ b/roi/_variables.scss
@@ -1,8 +1,7 @@
-/* Variables */
+$font-family: "Arial, sans-serif";
 $background-color: #fff;
 $text-color: #333;
-$primary-color: #99E2D0;
+$menu-background: #f6f6f6;
+$highlight-color: #99E2D0;
 $gradient: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-$font-main: "Arial, sans-serif";
-$font-secondary: "Shrikhand, cursive";
-$box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+$font-family-heading: "Shrikhand, cursive";
