--- a/roi/roi.css
+++ b/roi/roi.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 
 /* Reset léger */
 * {
@@ -8,7 +9,7 @@
 
 body {
   line-height: 1.6;
-  font-family: Arial, sans-serif;
+  font-family: "Arial, sans-serif";
   background-color: #fff;
   color: #333;
 }
@@ -36,25 +37,25 @@ button {
 
 .container {
   max-width: 1440px;
+  margin: auto;
 }
 
 header {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 70%;
-  padding-left: 20px;
-  box-sizing: initial;
+  justify-content: center;
+ position: relative;
+  padding: 20px 10px 10px 20px;
+
+}
+.go{
+  position: absolute;
+  left:15px
 }
 
-header h1 {
-  font-family: "Shrikhand", cursive;
-}
 
-.food-card img {
-  width: 100%;
-  object-fit: cover;
-  position: relative;
+.log-site img {
+  
+  width: 150px;
 }
 
 .food-card {
@@ -62,77 +63,82 @@ header h1 {
   z-index: 0;
   margin-bottom: -40px;
 }
+.food-card img {
+  width: 100%;
+  height: 383px;
+  object-fit: cover;
+}
 
 .menu-card {
   background: #f6f6f6;
-  border-radius: 40px 40px 0px 0px;
+  border-radius: 40px 40px 0 0;
   position: relative;
   z-index: 1;
+  cursor: pointer;
 }
 
-.titel-menu h2 {
-  font-family: "Shrikhand", cursive;
+.title-menu h1 {
+ 
+  font-family: "Shrikhand", cursiv;
   padding-top: 15px;
   padding-left: 15px;
 }
 
-.logo-love i {
-  font-size: 20px;
+.logo-love i, .logo-love-sytle {
+  font-size: 30px;
   -webkit-text-stroke: white 1px;
   position: absolute;
-  right: 5%;
-  top: 24px;
+  top: 22px;
+  right: 20px;
+  transition: opacity 1s;
 }
-
-.logo-love-sytle {
-  font-size: 20px;
-  -webkit-text-stroke: white 1px;
-  position: absolute;
+.logo-love i.logo-love-sytle, .logo-love-sytle.logo-love-sytle {
   opacity: 0;
   display: inline-block;
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
   background-clip: text;
+  top: 13px;
+  right: 20px;
   -webkit-text-fill-color: transparent;
-  transition: opacity 1s;
-  right: 5%;
-  top: 18px;
+  position: absolute;
+ 
 }
-
-.logo-love-sytle:hover {
+.logo-love i.logo-love-sytle:hover, .logo-love-sytle.logo-love-sytle:hover {
   opacity: 1;
 }
 
 .menu__entrees {
-  margin-bottom: 3rem;
-  margin: auto;
+  margin: 3rem auto;
   width: 95%;
 }
 
-.underline-titel {
+.underline-title {
   text-transform: uppercase;
-  font-family: "Roboto", sans-serif;
+  font-family: "'Roboto', sans-serif";
   margin-bottom: 1.25rem;
   font-weight: 300;
   font-size: 16px;
+  position: relative;
 }
-
-.underline-titel::after {
+.underline-title::after {
   background: #99E2D0;
   bottom: -0.3125rem;
   content: "";
   display: block;
   height: 0.1875rem;
-  position: relative;
-  width: 2.5rem;
+  position: absolute;
+  width :2.5rem;
+  transition: width 500ms linear;
+ 
+}
+.underline-title:hover:after  {
+  width: 7rem;
 }
 
-.plat--one {
-  animation-delay: 75ms;
-}
 
 .menu {
   padding: 0.75rem;
-  background: #FFF;
+  background: #fff;
   border-radius: 1rem;
   margin-bottom: 1rem;
   animation: menu-appear 750ms cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
@@ -145,14 +151,7 @@ header h1 {
   justify-content: space-between;
   flex-wrap: nowrap;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
+/* Keyframes */
 @keyframes menu-appear {
   0% {
     transform: scale(0);
@@ -160,21 +159,29 @@ a {
   100% {
     transform: scale(1);
   }
+
 }
-.menu__info {
+.menu:hover {
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+.menu:hover .menu__select {
+  margin: -0.75rem -1.1rem -0.75rem 1rem;
+}
+.menu:hover i {
+  transform: rotate(360deg);
+}
+.menu .menu__info {
   white-space: nowrap;
   overflow: hidden;
   flex: 1;
 }
-
-.menu__price {
+.menu .menu__price {
   align-self: flex-end;
   margin-left: 0.625rem;
 }
-
-.menu__select {
+.menu .menu__select {
   background-color: #99E2D0;
-  color: #FFF;
+  color: #fff;
   font-size: 1.25rem;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
@@ -185,39 +192,20 @@ a {
   margin: -0.75rem -4.5rem -0.75rem 1rem;
   transition: margin-right 750ms ease;
 }
-
-i {
-  transition: transform 750ms ease;
-}
-
-.menu:hover .menu__select {
-  margin: -0.75rem -1.1rem -0.75rem 1rem;
-}
-
-.menu:hover {
-  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
-}
-
-.menu__select i {
+.menu .menu__select i {
   background: #fff;
   color: #99E2D0;
   width: 20px;
   border-radius: 50%;
-  transform: rotate(0);
   transition: transform 750ms ease;
-}
-
-.menu:hover i {
-  transform: rotate(360deg);
 }
 
 .btn__commande {
   display: flex;
   justify-content: center;
-  padding: 30px;
+  padding-bottom: 35px;
 }
-
-.btn {
+.btn__commande .btn {
   width: 186px;
   height: 50px;
   color: #fff;
@@ -225,78 +213,94 @@ i {
   font-size: 18px;
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 }
-
-.btn:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+.btn__commande .btn:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
 }
 
+/**footer**/
 footer {
   width: 100%;
   background: #333;
-  padding: 20px 0px 20px 0px;
+  padding: 20px 0;
 }
-
-footer h5 {
-  font-family: "Shrikhand", cursive;
+footer h4 {
+  font-family: "Shrikhand", cursiv;
   font-weight: bold;
   font-style: italic;
-  color: white;
+  color: #fff;
   margin: auto;
   padding-top: 10px;
   width: 90%;
   font-size: 18px;
 }
-
 footer ul {
   width: 90%;
-  color: white;
+  color: #fff;
   margin: auto;
   font-size: 16px;
 }
-
-li a {
+footer ul li a {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-@media (min-width: 768px) {
-  .container {
-    width: 90%;
+/* Media Queries */
+@media (min-width: 1025px) {
+  header{
+    padding: 25px 0px 25px 0px;
+  }
+ 
+  .menu-card{
     margin: auto;
+    width: 70%;
   }
-  header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-  }
-  header h1 {
+  
+  .log-site {
     display: flex;
     justify-content: center;
-    width: 100%;
+   
   }
+  
   .food-card img {
-    width: 100%;
     height: 380px;
-    object-fit: cover;
-    position: relative;
     z-index: 1;
   }
-}
-@media (min-width: 768px) and (min-width: 1200px) {
-  .menu-card {
-    max-width: 1000px;
-    margin: auto;
+  
+  .title-menu  {
+    display: flex;
+    justify-content: center;
+   
+  }
+  .title-menu h1{
+position: relative;
+   
+    font-size: 28px;
+
+  }
+  .logo-love i, .logo-love-sytle {
+
+    left: 680Px;
+    top: 22px;
+
+  }
+  .logo-love i.logo-love-sytle, .logo-love-sytle.logo-love-sytle{
+    left: 680Px;
+    top: 13px;
+   
+  }
+  .menu__entrees{
+    padding: 0px 10% 0px 10%;
   }
   footer {
     display: flex;
     text-align: center;
     flex-direction: row-reverse;
   }
-  footer h5 {
-    width: 40%;
+  footer h4 {
+    width: 15%;
     padding-top: 0;
+   
   }
   footer ul {
     display: flex;
@@ -305,4 +309,5 @@ li a {
   }
 }
 
-/*# sourceMappingURL=menu-du-roi.css.map */
+
+/*# sourceMappingURL=delice.css.map */
