--- a/roi/roi.css
+++ b/roi/roi.css
@@ -289,6 +289,9 @@ position: relative;
     top: 13px;
    
   }
+  .logo-love i.logo-love-sytle{
+    top:14px;
+  }
   .menu__entrees{
     padding: 0px 10% 0px 10%;
   }
